2011-03-16  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.in (rpm): Depend on svn-dist and updated
	location of .tar.gz file to copy.
	* gnustep-make.spec.in (CFLAGS): Added --with-layout=gnustep
	to configure command.
	(%files): Added /etc/GNUstep/GNUstep.conf.

2011-03-16  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/gnustep-filesystem.texi: Updated documentation for
	change in default filesystem layout and configuration file
	location.
	* Documentation/gnustep-howto.texi: Same change.
	* Documentation/install.texi: Same change.
	* Documentation/gnustep-make.texi (GNUSTEP_INSTALLATION_DOMAIN):
	Updated explanation of this variable.
	* Documentation/gnustep-userfaq.texi (No Makefile): Updated
	location of GNUstep.sh.
	* INSTALL: Regenerated.
	
2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/gswapp.make (GNUSTEP_GSWAPPS): Variable removed.
	This was deprecated on 2007-03.
	* Instance/resource-set.make: Removed support for
	xxx_RESOURCE_FILES_INSTALL_DIR.  This was deprecated on 2007-02.
	* Documentations/releasenotes.texi: Explain the changes.
	* RELEASENOTES: Regenerated.
	
2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Removed obsolete --with-system-root,
	--with-local-root and --with-network-root options.  These have
	been obsolete since 2007-02.
	* configure: Regenerated.
	* Documentations/releasenotes.texi: Explain the change.
	* RELEASENOTES: Regenerated.
	
2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac (--with-config-file): If nothing is specified, use
	/etc/GNUstep/GNUstep.conf if the prefix is /, /usr or
	/usr/GNUstep, and $prefix/etc/GNUstep/GNUstep.conf in other cases.
	Updated documentation.
	* configure: Regenerated.
	* Documentations/releasenotes.texi: Explain the change in default
	location of the config file.
	* RELEASENOTES: Regenerated.	

2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>
