@@ -39,9 +39,22 @@ endif
 
 # If CC is already set but not from the GNU make default (ie, in the
 # environment), don't override it but use the provided compiler.  This
-# makes it easier to swap compilers on the fly.
+# makes it easier to swap C/ObjC compilers on the fly.
 ifeq ($(CC),)
   CC       = @CC@
+endif
+
+# Ignore the default CXX=g++ used by GNU make when nothing is specified;
+# in that case, we want to use our own default CXX.
+ifeq ($(origin CC), default)
+  CXX       = @CXX@
+endif
+
+# If CXX is already set but not from the GNU make default (ie, in the
+# environment), don't override it but use the provided compiler.  This
+# makes it easier to swap C++/ObjC++ compilers on the fly.
+ifeq ($(CXX),)
+  CXX       = @CXX@
 endif
 
 # TODO: Because of the following, OPTFLAG usually ends up being '-g
@@ -54,7 +67,6 @@ OBJCFLAGS= @OBJCFLAGS@
 OBJC_LIB_FLAG = @OBJC_LIB_FLAG@
 CPPFLAGS = @CPPFLAGS@
 CPP      = @CPP@
-CXX      = @CXX@
 CCFLAGS  = @CXXFLAGS@
 
 # If the 'debug' variable is not specified on the command-line or in
